# posthog-session-insights

./: .gitignore  Dockerfile  README.MD  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  task.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0d2bb1afb90a_setup_database.py  33cbcc90f0fc_add_enriched_event_table.py  35f1eb8d380e_add_updated_at_to_raw_events.py  913ba7ffd15a_add_elements_chain_to_raw_event.py  c758e4339c68_remove_processing_from_status_enum.py
app/: __init__.py  config.py  db.py  db_models.py  models.py  pattern_rules.py  utils.py
app/api/: dependencies.py  routes.py
app/repositories/: raw_event_repo.py  session_repo.py
app/services/: context_services.py  enrichment_services.py  event_parsing.py  event_services.py  pattern_detection.py  persist_services.py  query_services.py  semantic_builder_services.py  session_services.py
app/workers/: ingestion_worker.py
demo/: docker-compose.yml  dummy_client.py  dummy_client_randomized.py  sample_events.json
test/: conftest.py  helpers.py  test_api.py  test_context_services.py  test_enrichment_service.py  test_enrichment_services.py  test_event_parsing.py  test_ingestion_worker.py  test_pattern_detection.py  test_semantic_label_builder.py  test_utils.py
