[project]
name = "posthog-session-insights"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Kusy",email = "daniel.kusy97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "setuptools (>=80.9.0,<81.0.0)",
    "fastapi[standard] (>=0.123.7,<0.124.0)",
    "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy-utils (>=0.42.0,<0.43.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.11.0"
isort = "^7.0.0"
alembic = "^1.17.2"
pytest = "^9.0.1"
pytest-asyncio = "^1.3.0"
pytest-mock = "^3.15.1"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.poetry]
package-mode = false
